# gordian_linux_build

./: CMakeLists.txt  README.md
src/: EasyBMP_Geometry.h  Gordian.cpp  Gordian.h  main.cpp
src/include/: armadillo
src/include/armadillo_bits/: BaseCube_bones.hpp  BaseCube_meat.hpp  Base_bones.hpp  Base_meat.hpp  Col_bones.hpp  Col_meat.hpp  Cube_bones.hpp  Cube_meat.hpp  Gen_bones.hpp  Gen_meat.hpp  Mat_bones.hpp  Mat_meat.hpp  Op_bones.hpp  Proxy.hpp  Row_bones.hpp  Row_meat.hpp  SizeCube_bones.hpp  SizeCube_meat.hpp  SizeMat_bones.hpp  SizeMat_meat.hpp  SpBase_bones.hpp  SpBase_meat.hpp  SpMat_bones.hpp  SpMat_iterators_meat.hpp  SpMat_meat.hpp  SpSubview_bones.hpp  SpSubview_meat.hpp  arma_boost.hpp  arma_cmath.hpp  arma_config.hpp  arma_ostream_bones.hpp  arma_ostream_meat.hpp  arma_rng.hpp  arma_rng_cxx98.hpp  arma_static_check.hpp  arma_version.hpp  arpack_bones.hpp  arpack_wrapper.hpp  arrayops_bones.hpp  arrayops_meat.hpp  (+123 more)
testcases/: custom_netlist1.txt  custom_netlist2.txt  netlist_L.txt
